--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Template • TodoMVC</title>
-		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
-		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+		<link rel="stylesheet" href="lib/base.css">
+		<link rel="stylesheet" href="lib/index.css">
 		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
@@ -68,7 +68,7 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<!--<script src="node_modules/todomvc-common/base.js"></script>-->
-        <script src="node_modules/vue/dist/vue.js"></script>
+        <script src="lib/vue.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
